# nle-2-analyser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-deploy.yml
src/: criteria.py  main.py
src/views/: __init__.py  data_input.py  report.py
src/widgets/: __init__.py  appbar.py  score_input.py
