[project]
name = "nle-2-analyser"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Krit Patyarath (Mr.Tofu)", email = "kris_pyr@kkumail.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
# org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
# product = "nle-2-analyser"

# company name to display in about app dialogs
# company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Mr. Tofu"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py"]
exclude = [".venv", ".ruff_cache", ".mypy_cache", "storage"]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["DJ", "D", "ANN003", "PLC0414", "COM812"]
fixable = ["ALL"]